[gd_scene load_steps=7 format=3 uid="uid://bus4jkgtheycp"]

[ext_resource type="Texture2D" uid="uid://5fcgjf624a6x" path="res://graphics/ui/frame.png" id="1_eb62e"]
[ext_resource type="Texture2D" uid="uid://ftkgg8wg17u" path="res://graphics/ui/tower thumbnails/basic.png" id="2_phscs"]
[ext_resource type="Script" uid="uid://cf0rcbgqr5aht" path="res://Scripts/tower_card.gd" id="2_x6e6i"]
[ext_resource type="FontFile" uid="uid://bqm53gushpubk" path="res://graphics/ui/Digitalt.otf" id="3_phscs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x6e6i"]
texture = ExtResource("1_eb62e")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a3iqt"]
texture = ExtResource("1_eb62e")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="TowerCard" type="Button" groups=["TowerCard"]]
clip_children = 1
custom_minimum_size = Vector2(140, 180)
offset_right = 8.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxTexture_x6e6i")
script = ExtResource("2_x6e6i")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.15294118, 0.15294118, 0.15294118, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_a3iqt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TowerPreview" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/TowerPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9340804, 0.9340805, 0.9340802, 1)

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TowerPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_phscs")
expand_mode = 2
stretch_mode = 5

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TowerNameLabel" type="Label" parent="VBoxContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_phscs")
theme_override_font_sizes/font_size = 24
text = "Tower Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerCostLabel" type="Label" parent="VBoxContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_phscs")
theme_override_font_sizes/font_size = 24
text = "Tower Cost"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
